# libpoly_ocaml_bindings

./: .gitignore  .gitmodules  Makefile  README.md  dune-project  libpoly.opam  libpoly_bindings.opam
scripts/: build_vendor_deps.sh  cleanup_opam_install.sh  dune_uninstall_quiet.sh  install_vendor_deps.sh  uninstall_vendor_deps.sh
src/: ctypes_function_description.ml  ctypes_type_description.ml  dune  libpoly.ml  libpoly.mli  libpoly_core.ml  libpoly_core.mli  libpoly_ext.c.ml
src/structs/: dune  libpoly_structs.ml  libpoly_structs_stubs.c  libpoly_structs_stubs.h
src_config/: discover.ml  dune  set_flags.ml  struct_sizes.ml
src_tests/: dune  test.ml
