(library
 (name libpoly)
 (public_name libpoly_bindings)
 (libraries ctypes ctypes-zarith sexplib containers ppx_cstubs structs)
 (flags (:include ../src_config/link_flags))
 (preprocess (pps ppx_deriving.std ppx_optcomp ppx_cstubs.merlin))
 (synopsis "libpoly bindings")
 (ctypes
    (external_library_name ctypes_bindings)
    (build_flags_resolver (vendored (c_flags "-w") (c_library_flags )))
    (headers (include "poly/dyadic_rational.h"
                      "poly/dyadic_interval.h"
                      "poly/algebraic_number.h"
                      "poly/integer.h"
                      "poly/upolynomial.h"))
    (type_description
      (instance Type)
      (functor Ctypes_type_description))
    (function_description
      (instance Function)
      (functor Ctypes_function_description)
      )
    (generated_types Types_generated)
    (generated_entry_point Ctypes_bindings)
    )
)

(env (dev (flags (:standard -warn-error -A))))
