(rule
 (targets c_flags.sexp c_library_flags.sexp c_flags.lines)
 (deps (:discover ../src_config/discover.exe))
 (action (run %{discover} -system %{ocaml-config:system} -pkg gmp gmp -pkg poly poly.0)))

(library
 (name libpoly_bindings)
 (public_name libpoly_bindings)
 (libraries ctypes ctypes-zarith libpoly_structs)
 (wrapped false)
 (private_modules
   Ctypes_bindings
   Ctypes_bindings__c_generated_functions__Ctypes_function_description__Function
   Ctypes_bindings__c_generated_types
   Ctypes_bindings__function_gen__Ctypes_function_description__Function
   Ctypes_bindings__type_gen
   Ctypes_function_description
   Ctypes_type_description
   Types_generated)
 (flags (:standard -w -27))
 (synopsis "libpoly bindings")
 (ctypes
    (external_library_name ctypes_bindings)
    (build_flags_resolver (vendored (c_flags (:include c_flags.sexp)) (c_library_flags (%{env:LDFLAGS=} "-w" (:include c_library_flags.sexp)))))
    (headers (include "poly/dyadic_rational.h"
                      "poly/dyadic_interval.h"
                      "poly/algebraic_number.h"
                      "poly/integer.h"
                      "poly/upolynomial.h"))
    (type_description
      (instance Type)
      (functor Ctypes_type_description))
    (function_description
      (instance Function)
      (functor Ctypes_function_description)
      )
    (generated_types Types_generated)
    (generated_entry_point Ctypes_bindings)
    )
)

(env (dev (flags (:standard -warn-error -A))))
